# data-engineering-zoomcamp-daudjan

./: .dockerignore  .gitignore  README.md  test_wsl.txt
01-docker-terraform/2_docker_sql/: README.md  pipeline.py  start_postgres.sh
01-docker-terraform/2_docker_sql/ingestion/: ingestion_data.py  ingestion_data_v2.py
01-docker-terraform/2_docker_sql/scripts/: run_ingestion_v1.sh
2026_cohort/: README.md  pyproject.toml
2026_cohort/module_1_docker_sql_terraform/: README.md
2026_cohort/module_1_docker_sql_terraform/docker_sql/: Dockerfile  README.md  docker-compose.yml  explore_smhi.ipynb  ingest.sh  ingest_data.py  pipeline.py  pyproject.toml
2026_cohort/module_1_docker_sql_terraform/docker_sql/sql/: validate.sql
2026_cohort/module_1_docker_sql_terraform/pipeline/: Dockerfile  pyproject.toml
2026_cohort/module_1_docker_sql_terraform/terraform/: .gitignore  README.md  main.tf  terraform.tfvars.example  variables.tf
2026_cohort/pipeline/: Dockerfile  pyproject.toml
archive_2025/: README.md
archive_2025/01-docker-terraform/2_docker_sql/: .gitignore  Dockerfile  README.md  docker-compose.yml
archive_2025/01-docker-terraform/2_docker_sql/ingestion/: pyproject.toml
archive_2025/01-docker-terraform/2_docker_sql/scripts/: run_ingestion_v2.sh
archive_2025/01-docker-terraform/2_docker_sql/sql/: test_connection.sql
test/: script.py
