[project]
name = "2026-cohort"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "requests>=2.32.0",
    "sqlalchemy>=2.0.43",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pgcli>=4.4.0",
]

